--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "cake17/cakephp-recaptcha",
     "type": "cakephp-plugin",
-    "description": "To easily use Google Recaptcha (free CAPTCHA service that protect websites from spam and abuse) in CakePHP projects",
+    "description": "[DEPRECIATED] Please use https://github.com/cakephp-fr/recaptcha/",
     "keywords": [
         "cakephp",
         "bootstrap",
